# cargo-embassy-devtool

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: build.rs  bump.rs  cargo.rs  main.rs  semver_check.rs  types.rs
src/cmd/: build.rs  check.rs  check_crlf.rs  check_manifest.rs  dependencies.rs  dependents.rs  doc.rs  list.rs  mod.rs  prepare_release.rs  semver_check.rs  set_version.rs
