[package]
name = "cargo-embassy-devtool"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
walkdir = "2.5.0"
toml = "0.9.5"
toml_edit = { version = "0.23.1", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
regex = "1.10.4"
anyhow = "1"
semver = "1.0.26"
cargo-semver-checks = { git = "https://github.com/obi1kenobi/cargo-semver-checks.git", rev = "6148f0da00dbc6d3396dc7dfacbfd562f22bbdb0" }
log = "0.4"
simple_logger = "5.0.0"
temp-file = "0.1.9"
flate2 = "1.1.1"
crates-index = "3.11.0"
tar = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
cargo-manifest = "0.19.1"
shell-words = "1.1.1"
